# CTPMini_V1.7.5_20260115_for_java

./: README.md
CTPMini_V1.7.5_linux64_api_20260115/mdapi/: ThostFtdcUserApiStruct.h
CTPMini_V1.7.5_win_api_20260115/win32/mdapi/: ThostFtdcMdApi.h  thostmduserapi.lib
CTPMini_V1.7.5_win_api_20260115/win32/traderapi/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  thosttraderapi.lib
CTPMini_V1.7.5_win_api_20260115/win64/mdapi/: thostmduserapi.lib
CTPMini_V1.7.5_win_api_20260115/win64/traderapi/: thosttraderapi.lib
ctpjava/: pom.xml
ctpjava/jni/: CMakeLists.txt
ctpjava/jni/include/: jni_utils.h
ctpjava/jni/src/: MdApi_jni.cpp  TraderApi_jni.cpp  jni_utils.cpp  struct_convert.cpp
ctpjava/src/main/java/com/ctpmini/: Main.java  MyMdSpi.java
ctpjava/src/main/java/com/ctpmini/api/: CThostFtdcMdApi.java  CThostFtdcMdSpi.java  CThostFtdcTraderApi.java  CThostFtdcTraderSpi.java
ctpjava/src/main/java/com/ctpmini/constants/: ThostFtdcUserApiDataType.java
ctpjava/src/main/java/com/ctpmini/struct/: CThostFtdcBatchOrderActionField.java  CThostFtdcCancelOffsetSettingField.java  CThostFtdcCombActionField.java  CThostFtdcCombInstrumentField.java  CThostFtdcControlParamField.java  CThostFtdcDepthMarketDataField.java  CThostFtdcExchangeField.java  CThostFtdcExchangeMarginRateAdjustField.java  CThostFtdcExchangeMarginRateField.java  CThostFtdcExecOrderActionField.java  CThostFtdcExecOrderField.java  CThostFtdcFlowCtrlWarningField.java  CThostFtdcForQuoteField.java  CThostFtdcForQuoteParamField.java  CThostFtdcForQuoteRspField.java  CThostFtdcInputBatchOrderActionField.java  CThostFtdcInputCombActionField.java  CThostFtdcInputExecOrderActionField.java  CThostFtdcInputExecOrderField.java  CThostFtdcInputForQuoteField.java  CThostFtdcInputOffsetSettingField.java  CThostFtdcInputOptionSelfCloseActionField.java  CThostFtdcInputOptionSelfCloseField.java  CThostFtdcInputOrderActionField.java  CThostFtdcInputOrderField.java  CThostFtdcInputQuoteActionField.java  CThostFtdcInputQuoteField.java  CThostFtdcInstrumentCommissionRateField.java  CThostFtdcInstrumentField.java  CThostFtdcInstrumentMarginRateField.java  CThostFtdcInstrumentOrderCommRateField.java  CThostFtdcInstrumentStatusField.java  CThostFtdcInvestorField.java  CThostFtdcInvestorPositionDetailField.java  CThostFtdcInvestorPositionField.java  CThostFtdcInvestorPositionForCombField.java  CThostFtdcInvestorProdSPBMDetailField.java  CThostFtdcMBLMarketDataField.java  CThostFtdcMKInputOrderActionField.java  CThostFtdcOffsetSettingField.java  (+61 more)
ctpmini/: pom.xml
ctpmini/src/main/java/com/ctpmini/: MyMdSpi.java
ctpmini/src/main/java/com/ctpmini/mdapi/: CTPMiniMdApi.java  CTPMiniMdApiConstants.java  CTPMiniMdApiJNI.java  CThostFtdcAccountregisterField.java  CThostFtdcAuthenticationInfoField.java  CThostFtdcBatchOrderActionField.java  CThostFtdcBrokerDepositField.java  CThostFtdcBrokerField.java  CThostFtdcBrokerSyncField.java  CThostFtdcBrokerTradingAlgosField.java  CThostFtdcBrokerTradingParamsField.java  CThostFtdcBrokerUserEventField.java  CThostFtdcBrokerUserField.java  CThostFtdcBrokerUserFunctionField.java  CThostFtdcBrokerUserOTPParamField.java  CThostFtdcBrokerUserPasswordField.java  CThostFtdcBrokerUserRightAssignField.java  CThostFtdcBrokerWithdrawAlgorithmField.java  CThostFtdcBulletinField.java  CThostFtdcCFMMCBrokerKeyField.java  CThostFtdcCFMMCTradingAccountKeyField.java  CThostFtdcCFMMCTradingAccountTokenField.java  CThostFtdcCancelAccountField.java  CThostFtdcCancelOffsetSettingField.java  CThostFtdcChangeAccountField.java  CThostFtdcCombActionField.java  CThostFtdcCombInstrumentField.java  CThostFtdcCombInstrumentGuardField.java  CThostFtdcCombinationLegField.java  CThostFtdcCommPhaseField.java  CThostFtdcCommRateModelField.java  CThostFtdcContractBankField.java  CThostFtdcControlParamField.java  CThostFtdcCurrTransferIdentityField.java  CThostFtdcCurrentTimeField.java  CThostFtdcDRTransferField.java  CThostFtdcDepositResultInformField.java  CThostFtdcDepthMarketDataField.java  CThostFtdcDiscountField.java  CThostFtdcDisseminationField.java  (+322 more)
ctpmini/src/main/java/com/ctpmini/tradeapi/: CTPMiniTraderApi.java  CTPMiniTraderApiConstants.java  CTPMiniTraderApiJNI.java  CThostFtdcAccountregisterField.java  CThostFtdcAuthenticationInfoField.java  CThostFtdcBatchOrderActionField.java  CThostFtdcBrokerDepositField.java  CThostFtdcBrokerField.java  CThostFtdcBrokerSyncField.java  CThostFtdcBrokerTradingAlgosField.java  CThostFtdcBrokerTradingParamsField.java  CThostFtdcBrokerUserEventField.java  CThostFtdcBrokerUserField.java  CThostFtdcBrokerUserFunctionField.java  CThostFtdcBrokerUserOTPParamField.java  CThostFtdcBrokerUserPasswordField.java  CThostFtdcBrokerUserRightAssignField.java  CThostFtdcBrokerWithdrawAlgorithmField.java  CThostFtdcBulletinField.java  CThostFtdcCFMMCBrokerKeyField.java  CThostFtdcCFMMCTradingAccountKeyField.java  CThostFtdcCFMMCTradingAccountTokenField.java  CThostFtdcCancelAccountField.java  CThostFtdcCancelOffsetSettingField.java  CThostFtdcChangeAccountField.java  CThostFtdcCombActionField.java  CThostFtdcCombInstrumentField.java  CThostFtdcCombInstrumentGuardField.java  CThostFtdcCombinationLegField.java  CThostFtdcCommPhaseField.java  CThostFtdcCommRateModelField.java  CThostFtdcContractBankField.java  CThostFtdcControlParamField.java  CThostFtdcCurrTransferIdentityField.java  CThostFtdcCurrentTimeField.java  CThostFtdcDRTransferField.java  CThostFtdcDepositResultInformField.java  CThostFtdcDepthMarketDataField.java  CThostFtdcDiscountField.java  CThostFtdcDisseminationField.java  (+322 more)
swig_java/: CMakeLists.txt  README.md  ThostFtdcMdApi.i  ThostFtdcTraderApi.i  build_linux.sh  build_windows.bat
